docs(examples): remove legacy block and fix links; ui(footer): thin footer on docs, rich on home with 2026 copy

--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -37,7 +37,10 @@ Examples in this category focus on:
 - Consolidation logic behind derived entities such as `hat_leads`
 
 See also:
-- [ADE-001: Lead Duplication](./ade/ade-001)
+- [ADE-001: Lead Duplication](/docs/ade/ade-001)
+- [ADE-002: Company Consolidation](/docs/ade/ade-002)
+- [ADE-003: Master Record Selection](/docs/ade/ade-003)
+- [ADE-004: Data Normalization Impact](/docs/ade/ade-004)
 
 ---
 
@@ -55,7 +58,9 @@ Examples in this category focus on:
 - Revenue outcome drivers
 
 See also:
-- [DI-001](./di/di-001)
+- [DI-001: Deal Stage Conversion](/docs/di/di-001)
+- [DI-002: Time in Stage Analysis](/docs/di/di-002)
+- [DI-003: Buyer Attributes & Outcomes](/docs/di/di-003)
 
 ---
 
@@ -73,10 +78,11 @@ Examples in this category focus on:
 - Structural advantages and fairness considerations
 
 See also:
-- [VI-001](./vi/vi-001)
+- [VI-001: Lead Value Distribution](/docs/vi/vi-001)
+- [VI-002: Pipeline Creation Sources](/docs/vi/vi-002)
+- [VI-003: Opportunity Access Bias](/docs/vi/vi-003)
 
 ---
-
 ## Coaching Intelligence (CI)
 
 **Rep Skills & Behavior Analysis**
@@ -91,526 +97,8 @@ Examples in this category focus on:
 - Coaching and enablement effectiveness
 
 See also:
-- [CI-001: Rep Activity Consistency](./ci/ci-001)
-account management , or, more likely, a combination of those factors.
-Common Challenges and How to Accomplish with the Cien API
-It’s always helpful to have a “customer-walk” year by year, which shows starting customers, new, churned, retained and
-ending customers. With that data you can then calculate churn rate, growth rate, etc, etc. The biggest challenge is to know
-when and if an account has actually churned. CRM systems like Salesforce do not have an account status fi eld and churned
-date fi eld. Sometimes you can get this info from ERP systems; however, then you may have trouble cross-referencing it
-with the CRM data, since it uses di ff erent names and IDs.
-Cien determines the trueai_first_purchase and trueai_churned_on values for accounts in the ssr entity based on
-when the fi rst deal was won, and if there are subsequent deals within a year of that point. Please note that this analysis will
-only be valid if renewals are logged as opps in the CRM. If not, additional data from an ERP/Billing system must be
-supplied.
-- ------------------
-Example SQL
-SELECT -- just the last 5 years
-Year,
-COUNT(DISTINCT CASE WHEN date_part('year', trueai_first_purchase) &lt; Y.year AND
-COALESCE(date_part('year', trueai_churned_on),2100) &gt;= Y.year THEN _sys_doc_id END) as boy_customers, --
-get the beginning of year customers
-COUNT(DISTINCT CASE WHEN date_part('year', trueai_first_purchase) = Y.year THEN _sys_doc_id END) as
-new_customers, -- who bought for the first time
-COUNT(DISTINCT CASE WHEN date_part('year', trueai_churned_on) = Y.year THEN _sys_doc_id END) as
-churned_customers, -- who stopped buying this year
-COUNT(DISTINCT CASE WHEN date_part('year', trueai_first_purchase) = Y.year THEN _sys_doc_id END) -
-COUNT(DISTINCT CASE WHEN date_part('year', trueai_churned_on) = Y.year THEN _sys_doc_id END) as
-net_new_customers, -- diff between new and lost
-COUNT(DISTINCT CASE WHEN date_part('year', trueai_first_purchase) &lt;= Y.year AND
-COALESCE(date_part('year', trueai_churned_on),2100) &gt; Y.year THEN _sys_doc_id END) as eoy_customers, --
-customers at the end of the year
-COUNT(DISTINCT CASE WHEN date_part('year', trueai_churned_on) = Y.year THEN _sys_doc_id END) / CAST(1 +
-COUNT(DISTINCT CASE WHEN date_part('year', trueai_first_purchase) &lt; Y.year AND
-COALESCE(date_part('year', trueai_churned_on),2100) &gt;= Y.year THEN _sys_doc_id END) as float) as
-churn_rate -- churn rate is boy / churned
-FROM ssr S -- use SSR
-CROSS JOIN (
-SELECT 2021 as year UNION
-SELECT 2020 as year UNION
-SELECT 2019 as year UNION
-SELECT 2018 as year UNION
-SELECT 2017 as year
-) as Y -- create a pseudo year table to cross reference against
-WHERE (S.trueai_account_is_master = 'true' or S.trueai_account_is_master IS NULL) -- remove dupes
-GROUP BY Y.year -- group by year
-## ORDER BY 1 DESC
-LIMIT 5; -- most recent data
-- ------------------
-## Sample Result
-In this case, account churn was not a problem during 2018-2020, but doubled in 2021, resulting in a new decrease of active
-customers that year.
-year boy_customers new_customers churned_customers net_new_customers eoy_customers
-2021 1,396 111 175 -64 1,271
-2020 1,273 127 87 40 1,396
-2019 1,115 150 60 90 1,273
-2018 708 199 36 163 1,115
----
-title: Examples & Queries
-sidebar_label: Examples & queries
----
+- [CI-001: Rep Activity Consistency](/docs/ci/ci-001)
+- [CI-002: Skill Progression Over Time](/docs/ci/ci-002)
+- [CI-003: Coaching Intervention Impact](/docs/ci/ci-003)
+- [CI-004: Tool Adoption & Effectiveness](/docs/ci/ci-004)
 
-Welcome. Browse example categories below; each contains specific, copy‑ready queries and analyses.
-
-## Automatic Data Enhancement (ADE)
-_Transparency on the Data Cleanup Process_
-
-Before you start using the new derived entities it makes sense to understand the quality of the underlying data, and how it has been enhanced by the TrueAI platform. The following examples illustrate some of the ways in how this can be done.
-
-- ade-001: [Lead Duplication](/docs/ade/ade-001)
-
----
-
-## Deal Intelligence (DI)
-_Revenue & Buyer Journey Insights_
-
-Being able to isolate specific steps in the sales process, and understand the customer factors affecting outcomes is key to improving outcomes. The TrueAI platform makes that possible with the `ssr` and `ssr_history` entities.
-
----
-
-## Value Intelligence (VI)
-_Fairness & Value Creation in the GTM Org_
-
-If you want to understand rep performance, you must look at what value each rep received, as new leads, existing accounts, or new opportunities from an SDR team. Once you do, you will often find that top performance is correlated with having access to high potential accounts and a great pipeline, created by other reps.
-
----
-
-## Coaching Intelligence (CI)
-_Rep Skills & Behavior Analysis_
-
-Every GTM organization wants to develop their reps, but if you don’t understand their current behavior and skills, it is hard to provide meaningful individualized coaching, and next to impossible to evaluate the effectiveness of different training, available tools, etc. Cien changes that. Now, previously unavailable data points are at your fingertips.
-2021-02 $125,370,416 44% $59,061,419 $23,573,003 19% $101,797,413 52%
-2021-01 $223,850,916 45% $116,651,892 $17,898,678 19% $205,952,238 54%
-2020-04 $204,615,052 48% $117,202,623 $20,250,146 19% $184,364,906 57%
-2020-03 $58,606,686 43% $23,979,042 $18,418,612 19% $40,188,074 56%
-2020-02 $65,489,854 44% $27,049,820 $21,363,079 19% $ 44,126,775 56%
-2020-01 $115,796,755 47% $57,469,296 $14,458,985 19% $101,337,770 55%
-^ Top
-DI #4: Pipeline Analysis by Creator Group & Role (V.1.2)
-## Purpose of Analysis
-While creating pipeline is top-of-mind for GTM leadership, there are often doubts whether speci fi c groups and/or roles are
-contributing to the overall success of the sales team.
-Common Challenges and How to Accomplish with the Cien API
-Looking at the pipeline in aggregate is often not helpful, and it’s easy to draw very wrong conclusions. E.g., a common
-complaint is that SDRs create poorly quali fi ed pipeline that AEs then struggle to close. To determine if that is the case, you
-need to know who created the pipeline (hard if there are hando ff s at di ff erent points in the buyer journey). You also need
-to know the role of each rep, and you need to have a way to objectively measure the quality (probability of winning the
-deal) of each deal. None of this data is available in the raw CRM feed in a standardized format.
-Cien makes that analysis easy using the ssr_history and users entities. We are again relying on the
-step_next_success_prob fi eld, which contains the success prediction of the subsequent step. The
-step_success_prob predicts the probability of success in the current step. I.e., in this example the probability of a
-conversion into an opportunity.
-- ------------------
-Example SQL
-## SELECT
-U.trueai_group, -- the sales group
-SUM(SH.opp_pipeline_amt) as total_pipeline_created, -- the pipeline created during the period
-AVG(SH.step_next_success_prob) as predicted_opp_win_rate, -- the avg. predicted win rate of that
-pipeline (pipeline quality)
-SUM(SH.step_next_success_prob * SH.opp_pipeline_amt) as predicted_opp_win_amount, -- predicted win rate
-times amount is the expected won amount resulting from this pipeline
-SUM(CASE WHEN U.trueai_user_role_function = 'AE' THEN SH.opp_pipeline_amt END) as ae_pipeline, -- just
-pipeline created by AEs
-AVG(CASE WHEN U.trueai_user_role_function = 'AE' THEN SH.step_next_success_prob END) as
-ae_predicted_opp_win_rate, -- the avg. predicted win rate for AE only
-SUM(CASE WHEN U.trueai_user_role_function = 'SDR' THEN SH.opp_pipeline_amt END) as sdr_pipeline, -- just
-pipeline created by SDRs
-AVG(CASE WHEN U.trueai_user_role_function = 'SDR' THEN SH.step_next_success_prob END) as
-sdr_predicted_opp_win_rate -- the avg. predicted win rate for SDR only
-FROM ssr AS S -- link in SSR
-INNER JOIN ssr_history AS SH -- the SSR history gives you the bulk of the details
-ON S._sys_doc_id = SH._sys_ssr_id
-INNER JOIN users U
-ON SH.step_owner_id = U._sys_doc_id
-WHERE date_part('year', SH._sys_filt_end_date) = date_part('year', SH._sys_asof)-1 -- look at last year
-AND (S.trueai_account_is_master = 'true' OR S.trueai_account_is_master IS NULL) -- remove duplicates
-AND SH.step_name in ('Prospecting') -- let's only look at new logo prospecting
-AND SH.step_success = 'true' -- we're only interested in successfully completed steps, since we want to
-determine what will happen in the next step (selling)
-AND U.trueai_user_role_function in ('SDR','AE') -- let's exclude other roles
-GROUP BY U.trueai_group -- group by the sales team
-ORDER BY 1; -- order by group
-- ------------------
-## Sample Result
-In this case, pipeline quality varies across groups with the LATAM group struggling to create high-quality new logo pipeline.
-Worth noting is that the SDR generated pipeline is signi fi cantly worse than the AE pipeline for the Enterprise group.
-trueai_group total_pipeline_created predicted_opp_
-win_rate
-predicted_opp_
-win_amount
-ae_pipeline ae_predicted_opp_win_rate sdr_pipeline sdr_predicted_opp_
-win_rate
-LATAM $6,461,662 13% $842,752 $991,862 11% $5,469,800 13%
-EMEA $9,097,549 18% $1,710,604 $ 2,820,248 20% $6,277,300 18%
-Enterprise $18,275,038 18% $4,795,024 $ 3,964,363 27% $14,310,675 17%
-Mid Market $18,932,554 21% $3,734,812 $14,747,436 22% $4,185,118 17%
-^ Top
-DI #5: Win/Loss Analysis of New Logo Sales (V.1.2)
-## Purpose of Analysis
-Everyone wants to understand the secret to winning deals. There are tons of “best practices” out there, but what is really
-interesting is what factors have made reps win deals in your GTM organization. Here is a simple analysis that highlights
-what tends to be the factors with the biggest impact.
-Common Challenges and How to Accomplish with the Cien API
-Traditional win/loss analysis is often highly qualitative. The team pulls up X number of completed deals (usually just a
-fraction of all the deals in a quarter) and looks at what happened, what the customer did, how the rep responded and any
-other facts relevant to that speci fi c deal; for example, where the customer was located or which industry it was in.
-This analysis is often useful to understand broad trends, but it does not help much in ongoing global analysis of all deals
-and the most important factors for those, since most data is usually not readily available in the CRM database. And even if
-the data points are present, they are usually not adjusted based on data quality. E.g., raw activity count may vary a lot
-depending on if the rep is automatically recording their activities or not, whereas the stakeholders_all_adj_duration
-fi eld estimates the total time the team has spent on the deal in a speci fi c step, accounting for various levels of logging and
-prep time.
-Cien makes that type of analysis available with a minimum of e ff ort using the ssr_history entity grouping by the
-step_outcome fi eld. For simplicity, this analysis does not include stakeholder roles and levels, (i.e., which dept. and
-seniority a contact has) – this information can sometimes have a big impact as well and is also available in the same entity.
-- ------------------
-Example SQL
-## SELECT
-SH.step_outcome, -- outcome, in this case won or lost
-AVG(SH.step_success_prob) as avg_success_prediction, -- what was the avg prediction for each outcome
-COUNT(SH._sys_doc_id) AS deal_count, -- count of deals
-AVG(SH.step_length_in_days) AS avg_days, -- see how long each cycle is on avg in days
-AVG(SH.stkhlds_all_dur) / 3600 AS avg_hours_deal, -- total time spent on the deal (divide seconds by
-3600 to get hours)
-AVG(SH.stkhlds_all_dur_eng) / 3600 as avg_engaged_hours_deal, -- how many avtivities on avg were
-engaged
-AVG(SH.stkhlds_all_dur_eng) / CAST(AVG(SH.stkhlds_all_dur +1) as float) engagement_ratio, -- get the
-ratio
-AVG(CAST(SH.stkhlds_all_contacts_count as float)) as avg_number_of_contacts_involved -- get the avg
-number of contacts (need to cast to get a decimal)
-FROM ssr_history SH -- ssr history has all the sales steps info
-WHERE SH.step_name IN ('New Logo Selling') -- we're only interested in new logo
-AND date_part('year', SH._sys_filt_end_date) = date_part('year', SH._sys_asof) - 1 -- look at full last
-year
-AND SH.step_outcome IS NOT NULL -- exclude deals that are not yet closed
-GROUP by SH.step_outcome -- group by outcome - in this case won or lost
-ORDER BY 1 DESC; -- sort by outcome
-- ------------------
-## Sample Result
-In this case, the analysis shows a very common pattern, that more engagement results in a won deal (i.e., the customer is
-not going “radio-silent”, and not responding to the rep’s outreach). Factors such as number of buyer contacts involved does
-not seem to have any impact on outcome. Won deals are wrapped up in around 4 months, but deals that end up being
-lost, run much longer. Not surprisingly, there is a big di ff erence (2X) in the initial prediction of the deal being won.
-It is important to recall that this prediction is done prior to any actual sales activity has started on the deal – it does not
-consider whether the deal is owned by a “good” or a “bad” rep, or exactly the e ff ort they put into it (E.g., a rep could
-potentially completely ignore a good deal, hence losing it regardless of the initial high probability).
-step_outcome avg_success_prediction deal_count avg_days avg_hours_deal avg_engaged_hours_deal engagement_ratio avg_number_of_contacts_
-involved
-Closed Won 27% 206 111 148 98 66% 3.5
-Closed Lost 13% 2,036 410 42 16 39% 3.5
-^ Top
-DI #6: Revenue Concentration Analysis (V.1.2)
-## Purpose of Analysis
-Having too much revenue concentrated in a few large clients poses a great risk for a GTM organization. At the same time,
-many revenue leaders cite the Pareto principle (80% of your revenue comes from 20% of your clients) as almost inevitable.
-Common Challenges and How to Accomplish with the Cien API
-This analysis, unlike most other analyses, is not dependent on a lot of cleaning up of data, except that a customer with
-multiple purchases within a year needs to be consolidated.
-The tricky part of this analysis is to use running totals based on di ff erent sort orders. By using the PARTITION and OVER
-keywords in SQL, it is possible to get the number of the largest account that represents 80% of total annual revenue and
-compare that to the total number of accounts that bought in the year.
-- ------------------
-Example SQL
-## SELECT
-date_part('year', _sys_filt_end_date) as year, -- get the year
-SUM(opp_won_amt) as sum_sales, -- get the sum of sales
-COUNT(DISTINCT _sys_ssr_id) as customer_count, -- get # of buying customers
-AVG(opp_won_amt) as avg_sale_per_customer, -- get avg rev per account
-MAX(opp_won_amt) as biggest_customer_amt, -- get size of biggest account
-COUNT(DISTINCT CASE WHEN cumul_by_cust_size &lt;= (total_won * 0.8) THEN _sys_ssr_id END) as
-eighty_pct_revenue_customer_count, -- include all up to 80% of rev to get pareto number
-COUNT(DISTINCT CASE WHEN cumul_by_cust_size &lt;= (total_won * 0.8) THEN _sys_ssr_id END) /
-CAST(COUNT(DISTINCT _sys_ssr_id) as decimal) as eighty_pct_revenue_customer_percentage -- percentage of
-pareto number
-FROM -- second agg to do the rankings
-(SELECT
-_sys_filt_end_date, -- get the date
-_sys_ssr_id,
-opp_won_amt,
-ROW_NUMBER() OVER (PARTITION BY date_part('year', _sys_filt_end_date) ORDER BY _sys_filt_end_date) as
-sale_num, -- get the number of the account based on purchase date
-SUM(opp_won_amt) OVER (PARTITION BY date_part('year', _sys_filt_end_date) ORDER BY _sys_filt_end_date)
-as cumul_amt_won, -- add up sales for cumulative total based on date
-SUM(opp_won_amt) OVER (PARTITION BY date_part('year', _sys_filt_end_date)) as total_won, -- get the
-total won in the grouping (year)
-ROW_NUMBER() OVER (PARTITION BY date_part('year', _sys_filt_end_date) ORDER BY opp_won_amt DESC) as
-cust_size_rank, -- get the rank per year w/ 1 being the biggest customer
-SUM(opp_won_amt) OVER (PARTITION BY date_part('year', _sys_filt_end_date) ORDER BY opp_won_amt DESC) as
-cumul_by_cust_size -- get the ordering by size
-FROM -- first aggregation just get rev per year and account
-(SELECT
-MAX(_sys_filt_end_date) as _sys_filt_end_date, -- get the highest date for a purchase of that account
-_sys_ssr_id, -- get the unique account
-SUM(SH.opp_won_amt) as opp_won_amt -- sum up all purchases of that account
-FROM ssr_history SH
-WHERE SH.opp_won_amt &gt; 0 -- only care about clients that bought
-AND date_part('year', SH._sys_filt_end_date) &gt;= date_part('year', SH._sys_asof)-5 -- go back 5 years
-AND date_part('year', SH._sys_filt_end_date) &lt; date_part('year', SH._sys_asof) -- exclude current
-partial year
-GROUP BY date_part('year', SH._sys_filt_end_date), SH._sys_ssr_id -- group by account
-) as SH_by_account -- first agg
-) as SH_w_ranking -- second agg w/ ranking agg
-GROUP BY date_part('year', _sys_filt_end_date)
-ORDER BY date_part('year', _sys_filt_end_date) DESC;
-- ------------------
-## Sample Result
-In this case, the revenue concentration has increased over the last 5 years, despite much higher revenue. This is due to
-the largest clients now being 10X bigger than 5 years ago; a great accomplishment of course, but it does also increase the
-revenue risk.
-year sum_sales customer_count avg_sale_per_customer biggest_customer_amt eighty_pct_revenue_customer_
-count
-eighty_pct_revenue_cust
-omer_percentage
-2021 $550,545,641 844 $50,855 $19,558,632 210 25%
-2020 $306,118,228 708 $440,506 $10,037,060 181 26%
-2019 $199,708,922 642 $315,310 $8,693,700 196 31%
-2018 $163,111,824 441 $348,462 $10,173,060 130 29%
-2017 $72,672,920 311 $221,135 $1,961,263 126 41%
-^ Top
-Value Intelligence (VI) - Fairness & Value Creation in the GTM Org
-If you want to understand rep performance, you must look at what value each rep received, as new leads, existing accounts, or
-new opportunities from an SDR team. Once you do, you will often fi nd that top performance is correlated with having access to
-high potential accounts and a great pipeline, created by other reps.
-VI #1: Lead Generation by Quarter broken down by Creator Dept and Quality
-VI #1: Lead Generation by Quarter broken down by Creator Dept and Quality (V.1.2)
-## Purpose of Analysis
-To build new logo pipeline, you need to generate good new leads (or accounts if you use an Account Based approach). Those
-can be either inbound or outbound leads in di ff erent industries and locations. The reps should then follow up and attempt to
-convert those leads into opportunities (some companies call this Sales Quali fi ed Leads – SQL).
-The most common rep complaint is that the leads are not of good quality, and that marketing is not delivering enough lead
-generation value. That can easily be determined with this analysis.
-Common Challenges and How to Accomplish with the Cien API
-The challenge to determine lead value comes down to having accurate prediction of the propensity of a speci fi c lead to convert.
-To do so depends on a lot of factors and is usually not available in the CRM data. Sometimes the company does employ a lead
-scoring algorithm, but unless there is transparency in how the scoring works, it is often just a rough guide to which leads are
-the most likely to convert. As with other areas, duplicates of leads and accounts will often cause confusing results, unless
-recti fi ed prior to analysis.
-Unlike most other analyses, we are using the hat_leads entity here instead of the ssr_history, since it combines the fi rst three
-standardized steps in the sales process (lead gen, untouched and prospecting), hence making the queries easier to understand.
-We then join with the users entity to understand who created the lead so we can compare outcomes.
-- ------------------
-Example SQL
-CAST(date_part('year', HL._sys_filt_start_date) as VARCHAR) || '-0' || CAST(date_part('quarter',
-HL._sys_filt_start_date) as varchar) as year_qtr, -- the year and quarter
-Count(HL._sys_doc_id) as lead_gen_count, -- how many leads were generated
-COUNT(CASE WHEN HL.trueai_first_touch is not null THEN HL._sys_doc_id END ) as touched_count, -- how many
-of those were touched
-COUNT(CASE WHEN HL.trueai_converted_date is not null THEN HL._sys_doc_id END ) as converted_count, -- how
-many were converted into opps?
-AVG(HL.trueai_probability_of_conversion) as prob_conversion, -- what was the avg prediction probability of
-conversion of all?
-AVG(CASE WHEN HL.trueai_first_touch is not null THEN HL.trueai_probability_of_conversion END) as
-prob_conversion_of_touched, -- what was the prediction probaility of conversion on the ones that were
-actially touched
-COUNT(CASE WHEN U.trueai_user_role_dept = 'MKT' THEN HL._sys_doc_id END) as lead_count_mktng_gen, -- how
-many were generated by the Marketing Dept?
-COUNT(CASE WHEN U.trueai_user_role_dept = 'SALES' THEN HL._sys_doc_id END) as lead_count_sales_gen, -- how
-many were generated by the Sales Dept?
-AVG(CASE WHEN U.trueai_user_role_dept = 'MKT' THEN HL.trueai_probability_of_conversion END) as
-prob_conversion_mktng_gen, -- what was the avg. predicted prob of the marketing leads
-AVG(CASE WHEN U.trueai_user_role_dept = 'SALES' THEN HL.trueai_probability_of_conversion END) as
-prob_conversion_sales_gen, -- what was the avg predictied prob of the sales lead?
-SUM(HL.trueai_vi_leadgen_value) as vi_lead_gen_value -- what was the value intelligence lead value for the
-leads in the quarter?
-FROM hat_leads AS HL -- use hat_leads instead of SSR to look at the prospecting in a single row
-(ssr_history has 3 steps)
-INNER JOIN users AS U -- link in users to understand creator role
-ON HL.trueai_creator_id = U._sys_doc_id -- always _sys_doc_id is PK
-WHERE date_part('year', HL._sys_filt_start_date) &gt; date_part('year', HL._sys_asof) - 2 -- look back 1 year
-AND date_part('year', HL._sys_filt_start_date) &lt;&gt; date_part('year', HL._sys_asof) -- do not include
-current partial year
-GROUP BY date_part('year', HL._sys_filt_start_date), date_part('quarter', HL._sys_filt_start_date) -- group
-by year and quarter
-ORDER BY 1 DESC; -- most recent first
-- ------------------
-## Sample Result
-In this case, the absolute number of leads generated per quarter has remained fairly steady. Around 25% of those are actively
-prospected by the sales team. The team is picking leads that are more likely to be converted. Around 5% of the leads are
-generated by the sales team themselves. The value created follows the multiplication of the expected probability of conversion
-and total volume of leads.
-year_qtr lead_gen_
-count
-touched_
-count
-converted
-_count
-prob_co
-nversion
-prob_conversio
-n_of_touched
-lead_count_
-mktng_gen
-lead_count
-_sales_gen
-prob_conversio
-n_mktng_gen
-prob_conversi
-on_sales_gen
-vi_lead_gen_v
-alue
-2021-04 471,002 103,776 23,677 2.0% 7.2% 449,597 18,204 1.4% 15.5% $21,708,564
-2021-03 536,079 101,524 26,233 1.1% 5.1% 510,903 20,473 0.7% 9.8% $18,531,651
-2021-02 472,931 94,659 25,901 1.3% 4.7% 396,213 72,037 0.7% 3.6% $19,138,033
-^ Top
-### Coaching Intelligence (CI) - Rep Skills & Behavior Analysis
-Every GTM organization wants to develop their reps, but if you don’t understand their current behavior and skills, it is hard to
-provide meaningful individualized coaching, and next to impossible to evaluate the e ff ectiveness of di ff erent training, available
-tools, etc. Cien changes that. Now, previously unavailable data points are at your fi ngertips.
-CI #1: Rep Hiring & Termination Analysis
-CI #2: Time to Lead
-## CI #3: Quarterly Rep Performance Analysis
-CI #1: Rep Hiring & Termination Analysis (V.1.2)
-## Purpose of Analysis
-Just like you need to understand gained and lost accounts, you need to understand how the size of the sales team has
-changed over time and the makeup of the roles of the team.
-Common Challenges and How to Accomplish with the Cien API
-Unless you have access to accurate historical HR records, building this type of analysis from just CRM data can be di ffi cult
-since the typical CRM database typically has hundreds or thousands of users that are not directly part of the sales team.
-The challenges are to determine what roles users have, if they are managers or individual contributors and if they are still
-working or have been terminated (but perhaps not yet set to inactive). Cien does that automatically, and also has an Admin
-tool that lets you override the role, group and manager classi fi cation manually. That way you know you have the correct
-base data for all other performance analysis (because it would not make a lot of sense to compare junior SDR with a Senior
-Enterprise rep for example).
-This data resides in the users entity, which then gets copied over to the users_history table, so it can be tracked over time.
-As with most other entities, this data gets retroactively populated for multiple years upon initial processing of a CRM
-dataset.
-The key fi elds are the trueai_user_role (a set of 15 speci fi c CRM user roles), trueai_user_role_function
-(consolidated into higher level functions such as AE, AM, SDR etc.) and trueai_termination_date (which looks for
-multiple signals that a user is terminated – e.g. no logins or no activities in addition to the active fl ag).
-- ------------------
-Example SQL
-## SELECT
-Y.year as year, -- the year
-COUNT(DISTINCT CASE WHEN date_part('year', U.trueai_hire_date) &lt; Y.year AND date_part('year',
-COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt;= Y.Year THEN U._sys_doc_id END) as
-sales_user_count_boy, -- users in the beginning of the year
-COUNT(DISTINCT CASE WHEN date_part('year', U.trueai_hire_date) = Y.year THEN U._sys_doc_id END) as
-sales_user_hired, -- count of hired
-COUNT(DISTINCT CASE WHEN date_part('year', COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) =
-Y.year THEN U._sys_doc_id END)* -1 as sales_user_terminated, -- count of terminated (turn into neg
-number)
-COUNT(DISTINCT CASE WHEN date_part('year', U.trueai_hire_date) &lt;= Y.year AND date_part('year',
-COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt; Y.Year THEN U._sys_doc_id END) as
-sales_user_count_eoy, -- end of year count, should match next year boy
-COUNT(DISTINCT CASE WHEN U.trueai_user_role_function = 'AE' AND date_part('year', U.trueai_hire_date) &lt;=
-Y.year AND date_part('year', COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt; Y.Year THEN
-U._sys_doc_id END) as ae_count_eoy, -- account execs s at end of year (use user_role_function field
-instead of user_role to simplify query)
-COUNT(DISTINCT CASE WHEN U.trueai_user_role_function = 'AM' AND date_part('year', U.trueai_hire_date) &lt;=
-Y.year AND date_part('year', COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt; Y.Year THEN
-U._sys_doc_id END) as am_count_eoy,-- account managers at end of year (use user_role_function field
-instead of user_role to simplify query)
-COUNT(DISTINCT CASE WHEN U.trueai_user_role_function = 'SDR' AND date_part('year', U.trueai_hire_date)
-&lt;= Y.year AND date_part('year', COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt; Y.Year
-THEN U._sys_doc_id END) as sdr_count_eoy,-- sales development reps at end of year (use
-user_role_function field instead of user_role to simplify query)
-COUNT(DISTINCT CASE WHEN U.trueai_user_role_function = 'MGMT' AND date_part('year', U.trueai_hire_date)
-&lt;= Y.year AND date_part('year', COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt; Y.Year
-THEN U._sys_doc_id END) as mgmt_count_eoy,-- managers at end of year (use user_role_function field
-instead of user_role to simplify query)
-COUNT(DISTINCT CASE WHEN U.trueai_user_role_function = 'OTHER' AND date_part('year', U.trueai_hire_date)
-&lt;= Y.year AND date_part('year', COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt; Y.Year
-THEN U._sys_doc_id END) as other_count_eoy,-- others (e.g. sales engineers) at end of year (use
-user_role_function field instead of user_role to simplify query)
-COUNT(DISTINCT CASE WHEN date_part('year', U.trueai_hire_date) &lt;= Y.year AND date_part('year',
-COALESCE(U.trueai_termination_date, make_date(2100, 1,1))) &gt; Y.Year THEN U._sys_doc_id END) /
-CAST(COUNT(DISTINCT CASE WHEN U.trueai_user_role_function = 'MGMT' AND date_part('year',
-U.trueai_hire_date) &lt;= Y.year AND date_part('year', COALESCE(U.trueai_termination_date, make_date(2100,
-1,1))) &gt; Y.Year THEN U._sys_doc_id END) as decimal) as rep_mgr_ratio_eoy
-FROM users as U -- get the user info
-CROSS JOIN (
-SELECT 2021 as year UNION
-SELECT 2020 as year UNION
-SELECT 2019 as year UNION
-SELECT 2018 as year UNION
-SELECT 2017 as year
-) as Y -- create a pseudo year table to cross reference against
-WHERE U.trueai_user_role_dept = 'SALES' -- only the sales users
-GROUP BY Y.year -- group by year
-ORDER BY 1 DESC; -- most recent data
-- ------------------
-## Sample Result
-In this case, the team has grown consistently for the last 5 years, with the biggest increase in account management,
-re fl ecting the larger # of supported accounts. Rep to manager ratio (including supporting roles like Sales Engineers) has
-decreased to 4.7 from around 3.5 a few years ago.
-year sales_user_
-count_boy
-sales_user_
-hired
-sales_user_
-terminated
-sales_user_
-count_eoy
-ae_count_
-eoy
-am_count_
-eoy
-sdr_count_
-eoy
-mgmt_count_
-eoy
-other_count_
-eoy
-rep_mgr_ratio_
-eoy
-2021 1954 731 -464 2221 571 358 206 471 615 4.7
-2020 1583 573 -202 1954 546 298 170 445 495 4.3
-2019 1303 552 -272 1583 451 241 111 409 371 3.8
-2018 995 510 -202 1303 370 212 89 357 275 3.7
-2017 766 459 -230 995 249 175 78 295 198 3.5
-^ Top
-CI #2: Time to Lead (V.1.2)
-## Purpose of Analysis
-It is well known that there is a bene fi t to responding quickly to inbound leads. However, there may be doubts about how
-critical response time is in a speci fi c organization and how good the reps are on average to respond to inbound leads. This
-analysis makes it easy to answer those questions.
-Common Challenges and How to Accomplish with the Cien API
-To determine lead conversion (into a sales quali fi ed lead), you fi rst need to have a set of clean lead records. Using the CRM
-leads entity will often trick you, since the conversion may not be recorded correctly, and there might be multiple leads per
-account, skewing the results downwards. We recommend that you use the derived hat_leads entity instead, which solves
-that problem. Secondly, it’s important to understand which of the leads are inbound. Cien makes that easy by creating a
-trueai_leadsource_is_inbound fi eld. And lastly, you need to look at activity and conversion patterns to determine
-when a lead was actually touched. The trueai_first_touch fi eld gives you that information.
-- ------------------
-Example SQL
-## SELECT
-CASE WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 7 THEN 'Over a week'
-WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 3 THEN 'Over three days'
-WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 1 THEN 'Over one day'
-WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) * 24 &gt; 6 THEN 'Over 6 hours'
-WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) * 24 &gt; 1 THEN 'Over 1 hour'
-ELSE 'Within Minutes' END as time_to_touch_bucket, -- derived bucket
-AVG(CAST( HL.trueai_first_touch - HL.trueai_createdon as float) ) * 24 as avg_hours, -- time in hours
-count(HL.trueai_first_touch) as touched_leads, -- total touched leads
-AVG(HL.trueai_probability_of_conversion) as pred_conversion_rate, -- the expected prediction rate
-(gives you the overall quality but will not match the outcome rate because of the filters)
-count(HL.trueai_converted_date) as converted,
-(count(HL.trueai_converted_date) / CAST(COUNT(trueai_first_touch) as float)) as actual_conversion_rate
-FROM hat_leads HL -- use hat_leads since those have been consolidated if there were multiple leads
-and/or accounts from a single company
-WHERE HL._sys_filt_end_date BETWEEN HL._sys_asof - 180 AND HL._sys_asof - 90 -- let's only look at the
-last 90 days
-AND HL.trueai_leadsource_is_inbound = 'true' -- we're only interested in inbound leads coming to us
-AND CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &lt; 21 -- there are leads that are not
-touched for over 3 weeks - let's exclude those
-## GROUP BY
-CASE WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 7 THEN 'Over a week'
-WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 3 THEN 'Over three days'
-WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) &gt; 1 THEN 'Over one day'
-WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) * 24 &gt; 6 THEN 'Over 6 hours'
-WHEN CAST( HL.trueai_first_touch - HL.trueai_createdon as float) * 24 &gt; 1 THEN 'Over 1 hour'
-ELSE 'Within Minutes' END -- great a derived category field and group by it
-ORDER BY avg_hours DESC; -- sort by slowest response first
-- ------------------
-## Sample Result
-There is a dramatic di ff erence in outcome between responding immediately and later. The pred_conversion_rate
-allows you to understand if the reps are already selecting the best leads for fast follow up (that is the case here). In general,
-this sales organization is fairly good at responding quickly to leads.
-time_to_touch_bucket avg_hours touched_leads pred_conversion_rate converted actual_conversion_rate
-Over a week 855.9 85 10% 7 8%
-Over three days 120.1 71 15% 9 13%
-Over one day 47.8 43 21% 11 26%
-Over 6 hours 17.1 45 17% 6 13%
-Over 1 hour 2.6 85 18% 12 14%
-Within Minutes 0.1 840 23% 215 26%
-^ Top
